--- a/examples/create_rasterized_geodata.ipynb
+++ b/examples/create_rasterized_geodata.ipynb
@@ -25,13 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "6eb4603d-2845-49a2-91d7-17cde1c6e599",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:51.299334Z",
+     "start_time": "2025-06-03T13:53:14.304875Z"
+    }
+   },
    "source": [
     "from pyorps import initialize_geo_dataset, save_empty_cost_assumptions, GeoRasterizer"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -54,10 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "b46c0885-787f-467b-99d3-de4d57a06f83",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:51.995408Z",
+     "start_time": "2025-06-03T13:54:51.990190Z"
+    }
+   },
    "source": [
     "base_file_url = \"https://www.gds.hessen.de/wfs2/aaa-suite/cgi-bin/alkis/vereinf/wfs\"\n",
     "\n",
@@ -65,7 +73,9 @@
     "    \"url\": base_file_url,\n",
     "    \"layer\": \"ave_Nutzung\",\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -78,13 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "290ae1ba-a44b-4ef8-b88c-87d42b522151",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:52.010758Z",
+     "start_time": "2025-06-03T13:54:52.005932Z"
+    }
+   },
    "source": [
     "box_tuple = (471200, 5592700, 474200, 5595700)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -98,14 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "f01f8959-d467-4b28-9663-b921e9b095d9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:53.427267Z",
+     "start_time": "2025-06-03T13:54:52.057394Z"
+    }
+   },
    "source": [
     "geo_dataset = initialize_geo_dataset(wfs_request, bbox=box_tuple)\n",
     "geo_dataset.load_data()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -125,13 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "c3c35291-c407-4f72-8719-cfc511be2d27",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:53.447617Z",
+     "start_time": "2025-06-03T13:54:53.440620Z"
+    }
+   },
    "source": [
     "save_path_empty_cost_assumptions = r\"./data/cost_assumptions/cost_assumptions_template_HE_ALKIS.csv\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -146,14 +171,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "bcabafa4-f54b-493c-aae0-8791b670b8b8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:53.550216Z",
+     "start_time": "2025-06-03T13:54:53.462851Z"
+    }
+   },
+   "source": [
+    "save_empty_cost_assumptions(geo_dataset, save_path_empty_cost_assumptions)"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{('Wohnbaufläche', ''): 0,\n",
+       "{('Halde', nan): 0,\n",
+       " ('Straßenverkehr', nan): 0,\n",
+       " ('Weg', nan): 0,\n",
+       " ('Weg', 'Fußweg'): 0,\n",
+       " ('Landwirtschaft', 'Ackerland'): 0,\n",
+       " ('Landwirtschaft', 'Grünland'): 0,\n",
+       " ('Landwirtschaft', 'Gartenbauland'): 0,\n",
+       " ('Wald', 'Laub- und Nadelholz'): 0,\n",
+       " ('Wald', 'Nadelholz'): 0,\n",
+       " ('Wald', 'Laubholz'): 0,\n",
+       " ('Unland/Vegetationslose Fläche', nan): 0,\n",
+       " ('Fließgewässer', 'Graben'): 0,\n",
+       " ('Gehölz', nan): 0,\n",
+       " ('Industrie- und Gewerbefläche', 'Wasserwerk'): 0,\n",
+       " ('Fließgewässer', nan): 0,\n",
+       " ('Platz', nan): 0,\n",
+       " ('Sport-, Freizeit- und Erholungsfläche', 'Sportanlage'): 0,\n",
+       " ('Sport-, Freizeit- und Erholungsfläche',\n",
+       "  'Gebäude- und Freifläche Sport, Freizeit und Erholung'): 0,\n",
+       " ('Wohnbaufläche', nan): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Lagerfläche'): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Industrie und Gewerbe'): 0,\n",
        " ('Fläche gemischter Nutzung',\n",
@@ -161,43 +212,24 @@
        " ('Fläche gemischter Nutzung',\n",
        "  'Gebäude- und Freifläche Land- und Forstwirtschaft'): 0,\n",
        " ('Sport-, Freizeit- und Erholungsfläche', 'Grünanlage'): 0,\n",
-       " ('Straßenverkehr', ''): 0,\n",
-       " ('Weg', ''): 0,\n",
-       " ('Landwirtschaft', 'Ackerland'): 0,\n",
        " ('Landwirtschaft', 'Streuobstwiese'): 0,\n",
-       " ('Landwirtschaft', 'Grünland'): 0,\n",
-       " ('Gehölz', ''): 0,\n",
-       " ('Fließgewässer', 'Graben'): 0,\n",
-       " ('Fließgewässer', ''): 0,\n",
-       " ('Landwirtschaft', 'Gartenbauland'): 0,\n",
        " ('Fließgewässer', 'Bach'): 0,\n",
-       " ('Weg', 'Fußweg'): 0,\n",
-       " ('Fläche besonderer funktionaler Prägung', ''): 0,\n",
+       " ('Fläche besonderer funktionaler Prägung', nan): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Versorgungsanlage'): 0,\n",
-       " ('Fläche gemischter Nutzung', ''): 0,\n",
-       " ('Sport-, Freizeit- und Erholungsfläche',\n",
-       "  'Gebäude- und Freifläche Sport, Freizeit und Erholung'): 0,\n",
+       " ('Fläche gemischter Nutzung', nan): 0,\n",
        " ('Fläche gemischter Nutzung', 'Landwirtschaftliche Betriebsfläche'): 0,\n",
        " ('Fläche gemischter Nutzung', 'Wohnen'): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Handel und Dienstleistung'): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Kläranlage, Klärwerk'): 0,\n",
-       " ('Tagebau, Grube, Steinbruch', ''): 0,\n",
+       " ('Tagebau, Grube, Steinbruch', nan): 0,\n",
        " ('Fläche besonderer funktionaler Prägung', 'Öffentliche Zwecke'): 0,\n",
-       " ('Friedhof', ''): 0,\n",
-       " ('Platz', ''): 0,\n",
+       " ('Friedhof', nan): 0,\n",
        " ('Platz', 'Parkplatz'): 0,\n",
-       " ('Wald', 'Laub- und Nadelholz'): 0,\n",
-       " ('Wald', 'Laubholz'): 0,\n",
        " ('Unland/Vegetationslose Fläche', 'Gewässerbegleitfläche'): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Funk- und Fernmeldeanlage'): 0,\n",
-       " ('Industrie- und Gewerbefläche', 'Wasserwerk'): 0,\n",
-       " ('Halde', ''): 0,\n",
-       " ('Sport-, Freizeit- und Erholungsfläche', 'Sportanlage'): 0,\n",
-       " ('Wald', 'Nadelholz'): 0,\n",
-       " ('Unland/Vegetationslose Fläche', ''): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Abfallbehandlungsanlage'): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Umspannstation'): 0,\n",
-       " ('Industrie- und Gewerbefläche', ''): 0}"
+       " ('Industrie- und Gewerbefläche', nan): 0}"
       ]
      },
      "execution_count": 6,
@@ -205,9 +237,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "save_empty_cost_assumptions(geo_dataset, save_path_empty_cost_assumptions)"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -237,14 +267,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "f698ed49-2e43-4c18-87b0-bb202dfc9387",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:53.599028Z",
+     "start_time": "2025-06-03T13:54:53.564385Z"
+    }
+   },
    "source": [
     "cost_file_path = r\"./data/cost_assumptions/cost_assumptions.csv\"\n",
     "rasterizer = GeoRasterizer(geo_dataset, cost_file_path)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -258,14 +293,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "5e2ce4df-46bb-40d3-99e6-aee258e821bf",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:54.038614Z",
+     "start_time": "2025-06-03T13:54:53.609695Z"
+    }
+   },
+   "source": [
+    "raster_save_path = r\"./data/raster/big_raster.tiff\"\n",
+    "rasterizer.rasterize(save_path=raster_save_path)"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyorps.io.geo_dataset.InMemoryRasterDataset at 0x25ede12ae10>"
+       "<pyorps.io.geo_dataset.InMemoryRasterDataset at 0x1d85d61b200>"
       ]
      },
      "execution_count": 8,
@@ -273,10 +316,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "raster_save_path = r\"./data/raster/big_raster.tiff\"\n",
-    "rasterizer.rasterize(save_path=raster_save_path)"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
