--- a/examples/advanced_example.ipynb
+++ b/examples/advanced_example.ipynb
@@ -45,15 +45,16 @@
    "cell_type": "code",
    "id": "5d884566-7b84-427d-804a-f5e1001d5c15",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-06-03T13:54:51.554288Z",
+     "start_time": "2025-06-03T13:53:14.314877Z"
     }
    },
    "source": [
     "from pyorps import PathFinder"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -71,8 +72,8 @@
    "id": "84477805-270e-4ea7-819b-dbe7e2312b2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.384524400Z",
-     "start_time": "2025-06-03T09:37:56.345731Z"
+     "end_time": "2025-06-03T13:54:52.103024Z",
+     "start_time": "2025-06-03T13:54:52.096911Z"
     }
    },
    "source": [
@@ -84,7 +85,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -114,8 +115,8 @@
    "id": "43454dce-7744-448c-92be-113842fa861d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.384524400Z",
-     "start_time": "2025-06-03T09:37:56.368507Z"
+     "end_time": "2025-06-03T13:54:52.121665Z",
+     "start_time": "2025-06-03T13:54:52.112035Z"
     }
    },
    "source": [
@@ -136,7 +137,7 @@
     "}\n"
    ],
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -160,8 +161,8 @@
    "id": "89b435ce-02b9-4dbe-9c36-7820b78a9fa8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.384524400Z",
-     "start_time": "2025-06-03T09:37:56.393895Z"
+     "end_time": "2025-06-03T13:54:52.159949Z",
+     "start_time": "2025-06-03T13:54:52.153479Z"
     }
    },
    "source": [
@@ -187,7 +188,7 @@
     "]"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -206,8 +207,8 @@
    "id": "f06f4195-6b18-4772-bbc7-23e646c79c30",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.389127700Z",
-     "start_time": "2025-06-03T09:37:56.419635Z"
+     "end_time": "2025-06-03T13:54:52.179658Z",
+     "start_time": "2025-06-03T13:54:52.174919Z"
     }
    },
    "source": [
@@ -215,7 +216,7 @@
     "box_tuple = (471228, 5592632, 474176, 5594879)"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -233,8 +234,8 @@
    "id": "5a10096d-bbe0-4325-824a-886f27b7622b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.389127700Z",
-     "start_time": "2025-06-03T09:37:56.426221Z"
+     "end_time": "2025-06-03T13:54:52.200826Z",
+     "start_time": "2025-06-03T13:54:52.195526Z"
     }
    },
    "source": [
@@ -244,7 +245,7 @@
     "                 (box_tuple[2] - delta, box_tuple[3] - 10 * delta)]"
    ],
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -267,8 +268,8 @@
    "id": "9c77f814-1a9f-4718-8025-c2e624dfa273",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.389127700Z",
-     "start_time": "2025-06-03T09:37:56.450668Z"
+     "end_time": "2025-06-03T13:54:56.644033Z",
+     "start_time": "2025-06-03T13:54:52.216712Z"
     }
    },
    "source": [
@@ -296,7 +297,7 @@
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -321,8 +322,8 @@
    "id": "7ffc0ba5-ed14-4f40-9418-578856a724ed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.389127700Z",
-     "start_time": "2025-06-03T09:38:01.605759Z"
+     "end_time": "2025-06-03T13:54:59.416516Z",
+     "start_time": "2025-06-03T13:54:56.653626Z"
     }
    },
    "source": [
@@ -330,8 +331,27 @@
     "# This will use the source and target coordinates provided during initialization\n",
     "route_result = path_finder.find_route()"
    ],
-   "outputs": [],
-   "execution_count": 36
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[8]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# Start the path finding process by calling the find_route method without any inputs\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;66;03m# This will use the source and target coordinates provided during initialization\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m route_result = \u001B[43mpath_finder\u001B[49m\u001B[43m.\u001B[49m\u001B[43mfind_route\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\3_python_projects\\pyorps\\pyorps\\graph\\path_finder.py:514\u001B[39m, in \u001B[36mPathFinder.find_route\u001B[39m\u001B[34m(self, source, target, algorithm, calculate_metrics, pairwise, raster_parameters, **kwargs)\u001B[39m\n\u001B[32m    512\u001B[39m \u001B[38;5;66;03m# Find the shortest path using the graph API\u001B[39;00m\n\u001B[32m    513\u001B[39m \u001B[38;5;28;01mwith\u001B[39;00m timed(\u001B[33m\"\u001B[39m\u001B[33mshortest_path\u001B[39m\u001B[33m\"\u001B[39m, \u001B[38;5;28mself\u001B[39m.runtimes):\n\u001B[32m--> \u001B[39m\u001B[32m514\u001B[39m     path_indices = \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mgraph_api\u001B[49m.shortest_path(\n\u001B[32m    515\u001B[39m         source_indices=source_indices,\n\u001B[32m    516\u001B[39m         target_indices=target_indices,\n\u001B[32m    517\u001B[39m         algorithm=algorithm,\n\u001B[32m    518\u001B[39m         pairwise=pairwise,\n\u001B[32m    519\u001B[39m         **kwargs\n\u001B[32m    520\u001B[39m     )\n\u001B[32m    522\u001B[39m \u001B[38;5;66;03m# Case 1: Single source, single target -> single path\u001B[39;00m\n\u001B[32m    523\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(path_indices[\u001B[32m0\u001B[39m], \u001B[38;5;28mlist\u001B[39m):\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\3_python_projects\\pyorps\\pyorps\\graph\\path_finder.py:396\u001B[39m, in \u001B[36mPathFinder.graph_api\u001B[39m\u001B[34m(self)\u001B[39m\n\u001B[32m    393\u001B[39m \u001B[38;5;129m@property\u001B[39m\n\u001B[32m    394\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mgraph_api\u001B[39m(\u001B[38;5;28mself\u001B[39m) -> GraphAPI:\n\u001B[32m    395\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m._graph_api \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[32m--> \u001B[39m\u001B[32m396\u001B[39m         \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    397\u001B[39m         \u001B[38;5;66;03m# Overwrite the shortest_path_start_time, to make sure, that graph creation\u001B[39;00m\n\u001B[32m    398\u001B[39m         \u001B[38;5;66;03m# is not part of it\u001B[39;00m\n\u001B[32m    399\u001B[39m         \u001B[38;5;28mself\u001B[39m.runtimes[\u001B[33m\"\u001B[39m\u001B[33mshortest_path_start_time\u001B[39m\u001B[33m\"\u001B[39m] = time()\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\3_python_projects\\pyorps\\pyorps\\graph\\path_finder.py:374\u001B[39m, in \u001B[36mPathFinder.create_graph\u001B[39m\u001B[34m(self, band_index)\u001B[39m\n\u001B[32m    372\u001B[39m \u001B[38;5;66;03m# Importing the specified graph API using the timed context manager\u001B[39;00m\n\u001B[32m    373\u001B[39m \u001B[38;5;28;01mwith\u001B[39;00m timed(\u001B[33m\"\u001B[39m\u001B[33mimport_time_graph_api\u001B[39m\u001B[33m\"\u001B[39m, \u001B[38;5;28mself\u001B[39m.runtimes):\n\u001B[32m--> \u001B[39m\u001B[32m374\u001B[39m     graph_api_class_constructor = \u001B[43mget_graph_api_class\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mgraph_api_name\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    376\u001B[39m \u001B[38;5;66;03m# Get raster data for the specified band\u001B[39;00m\n\u001B[32m    377\u001B[39m raster_data = \u001B[38;5;28mself\u001B[39m.raster_handler.data[band_index]\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\3_python_projects\\pyorps\\pyorps\\graph\\path_finder.py:63\u001B[39m, in \u001B[36mget_graph_api_class\u001B[39m\u001B[34m(graph_api)\u001B[39m\n\u001B[32m     61\u001B[39m \u001B[38;5;28;01mmatch\u001B[39;00m graph_api:\n\u001B[32m     62\u001B[39m     \u001B[38;5;28;01mcase\u001B[39;00m \u001B[33m\"\u001B[39m\u001B[33mnetworkit\u001B[39m\u001B[33m\"\u001B[39m:\n\u001B[32m---> \u001B[39m\u001B[32m63\u001B[39m         \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpyorps\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mgraph\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mapi\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mnetworkit_api\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m NetworkitAPI\n\u001B[32m     64\u001B[39m         \u001B[38;5;28;01mreturn\u001B[39;00m NetworkitAPI\n\u001B[32m     65\u001B[39m     \u001B[38;5;28;01mcase\u001B[39;00m \u001B[33m\"\u001B[39m\u001B[33migraph\u001B[39m\u001B[33m\"\u001B[39m:\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\3_python_projects\\pyorps\\pyorps\\graph\\api\\networkit_api.py:6\u001B[39m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m ndarray\n\u001B[32m----> \u001B[39m\u001B[32m6\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnetworkit\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Graph\n\u001B[32m      7\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnetworkit\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mdistance\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Dijkstra, BidirectionalDijkstra, AStar\n\u001B[32m      9\u001B[39m \u001B[38;5;66;03m# Project files\u001B[39;00m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\3_python_projects\\pyorps\\.venv\\Lib\\site-packages\\networkit\\__init__.py:57\u001B[39m\n\u001B[32m     54\u001B[39m \thave_nx = \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[32m     56\u001B[39m \u001B[38;5;66;03m# local imports\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m57\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m graph\n\u001B[32m     58\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m graphio\n\u001B[32m     59\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m community\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\3_python_projects\\pyorps\\.venv\\Lib\\site-packages\\networkit\\graph.pyx:1\u001B[39m, in \u001B[36minit networkit.graph\u001B[39m\u001B[34m()\u001B[39m\n",
+      "\u001B[31mValueError\u001B[39m: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -346,7 +366,7 @@
    "id": "3d8e1cd3-d372-45b3-b9d7-4158e54003b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.389127700Z",
+     "end_time": "2025-06-03T13:54:59.420531200Z",
      "start_time": "2025-06-03T09:38:31.419552Z"
     }
    },
@@ -381,7 +401,7 @@
    "id": "e5a9aed0-88fc-4a14-a83a-0292110eaf8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.389127700Z",
+     "end_time": "2025-06-03T13:54:59.422527500Z",
      "start_time": "2025-06-03T09:38:31.434371Z"
     }
    },
@@ -438,7 +458,7 @@
    "id": "4142abfa-1570-467a-b835-78620d8a6464",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.394675100Z",
+     "end_time": "2025-06-03T13:54:59.425527800Z",
      "start_time": "2025-06-03T09:38:34.783396Z"
     }
    },
@@ -464,7 +484,7 @@
    "id": "11999d89-0fd9-44a9-bea5-c84e9b2ce4e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.396742700Z",
+     "end_time": "2025-06-03T13:54:59.428567100Z",
      "start_time": "2025-06-03T09:38:51.517928Z"
     }
    },
@@ -526,7 +546,7 @@
    "id": "82a54b14-6823-439e-ad13-2b267f5c4e7f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.396742700Z",
+     "end_time": "2025-06-03T13:54:59.429529200Z",
      "start_time": "2025-06-03T09:38:58.485059Z"
     }
    },
@@ -551,7 +571,7 @@
    "id": "a349fb4f-9b23-4d26-a654-a8ee832ee87a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T09:40:48.396742700Z",
+     "end_time": "2025-06-03T13:54:59.430530200Z",
      "start_time": "2025-06-03T09:39:10.211711Z"
     }
    },
