Adding cython_api.py and find_path_cython.pyx!

--- a/examples/create_rasterized_geodata.ipynb
+++ b/examples/create_rasterized_geodata.ipynb
@@ -28,8 +28,8 @@
    "id": "6eb4603d-2845-49a2-91d7-17cde1c6e599",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:51.299334Z",
-     "start_time": "2025-06-03T13:53:14.304875Z"
+     "end_time": "2025-06-28T13:11:41.690211Z",
+     "start_time": "2025-06-28T13:11:31.618142Z"
     }
    },
    "source": [
@@ -62,8 +62,8 @@
    "id": "b46c0885-787f-467b-99d3-de4d57a06f83",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:51.995408Z",
-     "start_time": "2025-06-03T13:54:51.990190Z"
+     "end_time": "2025-06-28T13:11:41.701151Z",
+     "start_time": "2025-06-28T13:11:41.695746Z"
     }
    },
    "source": [
@@ -91,8 +91,8 @@
    "id": "290ae1ba-a44b-4ef8-b88c-87d42b522151",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:52.010758Z",
-     "start_time": "2025-06-03T13:54:52.005932Z"
+     "end_time": "2025-06-28T13:11:42.056111Z",
+     "start_time": "2025-06-28T13:11:42.051911Z"
     }
    },
    "source": [
@@ -116,8 +116,8 @@
    "id": "f01f8959-d467-4b28-9663-b921e9b095d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:53.427267Z",
-     "start_time": "2025-06-03T13:54:52.057394Z"
+     "end_time": "2025-06-28T13:11:42.779864Z",
+     "start_time": "2025-06-28T13:11:42.064875Z"
     }
    },
    "source": [
@@ -148,8 +148,8 @@
    "id": "c3c35291-c407-4f72-8719-cfc511be2d27",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:53.447617Z",
-     "start_time": "2025-06-03T13:54:53.440620Z"
+     "end_time": "2025-06-28T13:11:42.791190Z",
+     "start_time": "2025-06-28T13:11:42.786129Z"
     }
    },
    "source": [
@@ -174,8 +174,8 @@
    "id": "bcabafa4-f54b-493c-aae0-8791b670b8b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:53.550216Z",
-     "start_time": "2025-06-03T13:54:53.462851Z"
+     "end_time": "2025-06-28T13:11:42.845440Z",
+     "start_time": "2025-06-28T13:11:42.798358Z"
     }
    },
    "source": [
@@ -204,21 +204,21 @@
        " ('Sport-, Freizeit- und Erholungsfläche', 'Sportanlage'): 0,\n",
        " ('Sport-, Freizeit- und Erholungsfläche',\n",
        "  'Gebäude- und Freifläche Sport, Freizeit und Erholung'): 0,\n",
+       " ('Fläche gemischter Nutzung', 'Landwirtschaftliche Betriebsfläche'): 0,\n",
+       " ('Fläche gemischter Nutzung', 'Wohnen'): 0,\n",
        " ('Wohnbaufläche', nan): 0,\n",
-       " ('Industrie- und Gewerbefläche', 'Lagerfläche'): 0,\n",
-       " ('Industrie- und Gewerbefläche', 'Industrie und Gewerbe'): 0,\n",
-       " ('Fläche gemischter Nutzung',\n",
-       "  'Gebäude- und Freifläche Mischnutzung mit Wohnen'): 0,\n",
        " ('Fläche gemischter Nutzung',\n",
        "  'Gebäude- und Freifläche Land- und Forstwirtschaft'): 0,\n",
+       " ('Fläche gemischter Nutzung',\n",
+       "  'Gebäude- und Freifläche Mischnutzung mit Wohnen'): 0,\n",
+       " ('Fläche gemischter Nutzung', nan): 0,\n",
        " ('Sport-, Freizeit- und Erholungsfläche', 'Grünanlage'): 0,\n",
+       " ('Industrie- und Gewerbefläche', 'Lagerfläche'): 0,\n",
+       " ('Industrie- und Gewerbefläche', 'Industrie und Gewerbe'): 0,\n",
        " ('Landwirtschaft', 'Streuobstwiese'): 0,\n",
        " ('Fließgewässer', 'Bach'): 0,\n",
        " ('Fläche besonderer funktionaler Prägung', nan): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Versorgungsanlage'): 0,\n",
-       " ('Fläche gemischter Nutzung', nan): 0,\n",
-       " ('Fläche gemischter Nutzung', 'Landwirtschaftliche Betriebsfläche'): 0,\n",
-       " ('Fläche gemischter Nutzung', 'Wohnen'): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Handel und Dienstleistung'): 0,\n",
        " ('Industrie- und Gewerbefläche', 'Kläranlage, Klärwerk'): 0,\n",
        " ('Tagebau, Grube, Steinbruch', nan): 0,\n",
@@ -270,8 +270,8 @@
    "id": "f698ed49-2e43-4c18-87b0-bb202dfc9387",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:53.599028Z",
-     "start_time": "2025-06-03T13:54:53.564385Z"
+     "end_time": "2025-06-28T13:11:42.877209Z",
+     "start_time": "2025-06-28T13:11:42.853349Z"
     }
    },
    "source": [
@@ -296,8 +296,8 @@
    "id": "5e2ce4df-46bb-40d3-99e6-aee258e821bf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-03T13:54:54.038614Z",
-     "start_time": "2025-06-03T13:54:53.609695Z"
+     "end_time": "2025-06-28T13:11:43.241057Z",
+     "start_time": "2025-06-28T13:11:42.883746Z"
     }
    },
    "source": [
@@ -308,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyorps.io.geo_dataset.InMemoryRasterDataset at 0x1d85d61b200>"
+       "<pyorps.io.geo_dataset.InMemoryRasterDataset at 0x296d6955b80>"
       ]
      },
      "execution_count": 8,
